fix: a11y color contrast for light-alt

--- a/ecep_assets/css/colors.css
+++ b/ecep_assets/css/colors.css
@@ -5,6 +5,10 @@
   --tc-color-2: var(--ecep-green); /* --global-color "secondary" */
   --tc-color-3: var(--ecep-green); /* --global-color "tertiary" */
 
+  /* manually pick color from vars that has accessible color contrast */
+  /* https://webaim.org/resources/linkcontrastchecker/?fcolor=F4F4F4&bcolor=222222&lcolor=A26EF0 */
+  --global-color-accent--light-alt: var(--global-color-accent--x-light);
+
   /* HEADER */
   /* https://github.com/TACC/Core-Styles/blob/v2.53.1/src/lib/_imports/core-styles.theme.default.css */
   --header-bkgd-color: var(--ecep-purple);
